--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,4 +1,38 @@
 <!--index.wxml-->
+<view class="page" xmlns:wx="http://www.w3.org/1999/xhtml">
+  <view class="page__bd">
+    <view class="weui-cells__title">学生证内容：</view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <view class="weui-cell__hd">
+          <view class="weui-label">名字</view>
+        </view>
+        <view class="weui-cell__bd">
+          <input class="weui-input" bindinput="bindNameInput" placeholder="老王" />
+        </view>
+      </view>
+      <view class="weui-cell weui-cell_input">
+        <view class="weui-cell__hd">
+          <view class="weui-label">院校</view>
+        </view>
+        <view class="weui-cell__bd">
+          <input class="weui-input" bindinput="bindCollegesInput" placeholder="家里系" />
+        </view>
+      </view>
+      <view class="weui-cell weui-cell_input">
+        <view class="weui-cell__hd">
+          <view class="weui-label">日期</view>
+        </view>
+        <view class="weui-cell__bd">
+          <picker mode="date" value="{{date}}" start="2015-09-01" end="2017-09-01" bindchange="bindDateChange">
+            <view class="weui-input">{{date}}</view>
+          </picker>
+        </view>
+      </view>
+    </view>
+  </view>
+</view>
+
 <view class="container">
   <button bindtap="upload_pic">{{button_text}}</button>
   <text>{{text}}</text>
