--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -11,6 +11,16 @@
           <input class="weui-input" bindinput="bindNameInput" placeholder="老王" />
         </view>
       </view>
+      <view class="weui-cell weui-cell_select">
+          <view class="weui-cell__hd weui-cell__hd_in-select-after">
+            <view class="weui-label">性别</view>
+          </view>
+          <view class="weui-cell__bd">
+            <picker bindchange="bindSexChange" value="{{sexIndex}}" range="{{sexList}}">
+              <view class="weui-select weui-select_in-select-after">{{sexList[sexIndex]}}</view>
+            </picker>
+          </view>
+      </view>
       <view class="weui-cell weui-cell_input">
         <view class="weui-cell__hd">
           <view class="weui-label">院校</view>
@@ -19,12 +29,30 @@
           <input class="weui-input" bindinput="bindCollegesInput" placeholder="家里系" />
         </view>
       </view>
+      <view class="weui-cell weui-cell_select">
+          <view class="weui-cell__hd weui-cell__hd_in-select-after">
+            <view class="weui-label">类别</view>
+          </view>
+          <view class="weui-cell__bd">
+            <picker bindchange="bindDegreeChange" value="{{degreeIndex}}" range="{{degreeList}}">
+              <view class="weui-select weui-select_in-select-after">{{degreeList[degreeIndex]}}</view>
+            </picker>
+          </view>
+      </view>
       <view class="weui-cell weui-cell_input">
         <view class="weui-cell__hd">
-          <view class="weui-label">日期</view>
+          <view class="weui-label">学号</view>
         </view>
         <view class="weui-cell__bd">
-          <picker mode="date" value="{{date}}" start="2015-09-01" end="2017-09-01" bindchange="bindDateChange">
+          <input type="number" maxlength="10" class="weui-input" bindinput="bindIdInput" placeholder="2017000001" />
+        </view>
+      </view>
+      <view class="weui-cell weui-cell_input">
+        <view class="weui-cell__hd">
+          <view class="weui-label">入学年份</view>
+        </view>
+        <view class="weui-cell__bd">
+          <picker mode="date" value="{{date}}" fields="year" start="1949" end="2020" bindchange="bindDateChange">
             <view class="weui-input">{{date}}</view>
           </picker>
         </view>
