--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <!--index.wxml-->
 <view class="page" xmlns:wx="http://www.w3.org/1999/xhtml">
-  <view class="page__bd">
+  <view class="page__bd" >
     <view class="weui-cells__title">学生证内容：</view>
     <view class="weui-cells weui-cells_after-title">
       <view class="weui-cell weui-cell_input">
@@ -12,14 +12,14 @@
         </view>
       </view>
       <view class="weui-cell weui-cell_select">
-          <view class="weui-cell__hd weui-cell__hd_in-select-after">
-            <view class="weui-label">性别</view>
-          </view>
-          <view class="weui-cell__bd">
-            <picker bindchange="bindSexChange" value="{{sexIndex}}" range="{{sexList}}">
-              <view class="weui-select weui-select_in-select-after">{{sexList[sexIndex]}}</view>
-            </picker>
-          </view>
+        <view class="weui-cell__hd weui-cell__hd_in-select-after">
+          <view class="weui-label">性别</view>
+        </view>
+        <view class="weui-cell__bd">
+          <picker bindchange="bindSexChange" value="{{sexIndex}}" range="{{sexList}}">
+            <view class="weui-select weui-select_in-select-after">{{sexList[sexIndex]}}</view>
+          </picker>
+        </view>
       </view>
       <view class="weui-cell weui-cell_input">
         <view class="weui-cell__hd">
@@ -30,14 +30,14 @@
         </view>
       </view>
       <view class="weui-cell weui-cell_select">
-          <view class="weui-cell__hd weui-cell__hd_in-select-after">
-            <view class="weui-label">类别</view>
-          </view>
-          <view class="weui-cell__bd">
-            <picker bindchange="bindDegreeChange" value="{{degreeIndex}}" range="{{degreeList}}">
-              <view class="weui-select weui-select_in-select-after">{{degreeList[degreeIndex]}}</view>
-            </picker>
-          </view>
+        <view class="weui-cell__hd weui-cell__hd_in-select-after">
+          <view class="weui-label">类别</view>
+        </view>
+        <view class="weui-cell__bd">
+          <picker bindchange="bindDegreeChange" value="{{degreeIndex}}" range="{{degreeList}}">
+            <view class="weui-select weui-select_in-select-after">{{degreeList[degreeIndex]}}</view>
+          </picker>
+        </view>
       </view>
       <view class="weui-cell weui-cell_input">
         <view class="weui-cell__hd">
@@ -58,11 +58,9 @@
         </view>
       </view>
     </view>
+    <view class="page__mt page__bd_spacing">
+      <button class="weui-btn" type="primary" bindtap="upload_pic" loading="{{uploading}}">{{button_text}}</button>
+      <image class="weui-btn" src="{{image_src}}"></image>
+    </view>
   </view>
-</view>
-
-<view class="container">
-  <button bindtap="upload_pic">{{button_text}}</button>
-  <text>{{text}}</text>
-  <image src="{{image_src}}"></image>
 </view>
