--- a/app.wxss
+++ b/app.wxss
@@ -12,9 +12,19 @@
 }
 
 page{
-    background-color: #F8F8F8;
-    font-size: 16px;
-    font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
+    -webkit-user-select: none;
+    user-select: none;
+    width: 100%;
+    height: 100%;
+    background-color: #f8f8f8;
+    font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
+}
+
+.flex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .page__hd {
     padding: 40px;
