最终页面调整未完成

--- a/pages/xsz/xsz.wxml
+++ b/pages/xsz/xsz.wxml
@@ -1,4 +1,10 @@
 <!--pages/xsz/xsz.wxml-->
-<view class="page__mt page__bd_spacing">
-  <image bindtap="onPicClick" class="weui-btn" src="{{image_src}}"></image>
+<view class="page">
+  <view class="page__hd_center">
+    <view class="page__title">还差一步，就能开始装逼....</view>
+    <image bindtap="onPicClick" class="xsz_image" src="{{image_src}}"></image>
+    <view class="page__mt page__bd_spacing">
+      <button class="weui-btn" type="primary" bindtap="save_pic">保存图片</button>
+    </view>
+  </view>
 </view>
