--- a/pages/xsz/xsz.wxss
+++ b/pages/xsz/xsz.wxss
@@ -1,1 +1,11 @@
-/* pages/xsz/xsz.wxss */
+.page__hd_center{
+  padding: 16px;
+  text-align:center;
+  float:left;
+}
+
+.xsz_image {
+  position: relative;
+  margin-top: 16px;
+  border: 1px;
+}
