--- a/pages/xsz/xsz.wxss
+++ b/pages/xsz/xsz.wxss
@@ -1,11 +1,18 @@
 .page__hd_center{
   padding: 16px;
   text-align:center;
-  float:left;
 }
 
 .xsz_image {
   position: relative;
   margin-top: 16px;
   border: 1px;
+  float:center;
+}
+
+.ad_image {
+ margin-top: 32px;
+ width:250px;
+ height: 140px;
+ background: #00ff00;
 }
