--- a/pages/xsz/xsz.wxml
+++ b/pages/xsz/xsz.wxml
@@ -2,7 +2,7 @@
 <view class="page">
   <view class="page__hd_center">
     <view class="page__title">还差一步，就能开始装逼....</view>
-    <image bindtap="onPicClick" class="xsz_image" src="{{image_src}}"></image>
+    <image bindtap="onPicClick" mode="aspectFit" class="xsz_image" src="{{image_src}}"></image>
     <view class="page__mt page__bd_spacing">
       <button loading="{{downloading}}" class="weui-btn" type="primary" bindtap="onSaveClick">保存图片</button>
     </view>
